Fix alignment issues on superhero.html

--- a/css/main.css
+++ b/css/main.css
@@ -97,4 +97,11 @@ pre {
   text-align: center;
 }
 
+.table td,
+.table th {
+    vertical-align: middle;
+    text-align: center;
+}
+
+
 
